# create-rust-lib-template

./: Cargo.toml  Makefile  README.md
examples/: main.rs  test.rs
src/: lib.rs  module.rs  module_test.rs  test.rs
tests/: integration_test.rs
